[tool.poetry]
name = "machine-learning"
version = "0.1.0"
description = "Explore Machine Learning through Kaggle"
authors = ["Edwin P. Magezi <edwinm_p@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
